--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -9,13 +9,13 @@
 // 背景色
 $background_color: #EFEFF4;
 // 主色
-$primary_color: #FF000;
+$primary_color: #FF4000;
 // 激活色
 $active_color: $primary_color;
 // hover色
 $hover_color: $primary_color;
 // line色
-$line_color: #AAAAAA;
+$line_color: #cdcaca;
 // 突出文字颜色
 $primary_text_color: #303133;
 // 普通文本颜色
