--- a/public/iconfont/font-1/iconfont.css
+++ b/public/iconfont/font-1/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1630024216791') format('truetype');
+  src: url('./iconfont.ttf?t=1630024216791') format('truetype');
 }
 
 .iconfont {
@@ -22,4 +22,5 @@
 .icon-shang-copy:before {
   content: "\e502";
 }
+
 
