修改页面样式，增加cookieToast提示

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -25,7 +25,7 @@ $line_color: #cdcaca;
 // 单选标签背景色
 $radio_label_bgcolor: #eef1f6;
 // link色
-$link_color: #009ee6;
+$link_color: #218aed;
 
 // 突出文字颜色
 $primary_text_color: #303133;
