统一修改文件中散落的样式字体大小代码

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -53,9 +53,9 @@ $content_width_md: 1114px;
 // 内容区小屏幕宽度
 $content_width_sm: 836px;
 
-.media-content {
-    width: $content_width_lg;
-}
+//.media-content {
+//    width: $content_width_lg;
+//}
 .one-line {
     overflow: hidden;
     text-overflow: ellipsis;
