暂未完成：修改样式

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -15,7 +15,9 @@ $font_family: rubik,sans-serif,Arial,microsoft yahei;
 // 背景色
 $background_color: #EFEFF4;
 // 主色
-$primary_color: #FF4000;
+$primary_color: #21B351;
+// 副色
+$deputy_color: #FF4000;
 // 激活色
 $active_color: $primary_color;
 // hover色
